--- a/iqengines-demo/res/layout/tutorial.xml
+++ b/iqengines-demo/res/layout/tutorial.xml
@@ -74,41 +74,38 @@
             android:layout_height="48dp"
             android:background="#DDDDDD" >
 
+            <ImageButton 
+                android:contentDescription="@string/desc_infoButton"
+                android:id="@+id/tutoButton"
+                android:layout_width="48dp" 
+                android:layout_height="48dp"
+                android:layout_gravity="left|center_vertical" 
+                android:background="@drawable/btn_background"
+                android:scaleType="centerInside"
+                android:clickable="true" 
+                android:src="@drawable/ic_menu_help_holo_light" />
+
             <ImageButton
-                android:id="@+id/nextButton"
+                android:contentDescription="@string/desc_capture"
+                android:id="@+id/goBack"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center"
+                android:background="@drawable/btn_background"
+                android:scaleType="centerInside"
+                android:clickable="true"
+                android:src="@drawable/ic_camera" />
+
+            <ImageButton
+                android:contentDescription="@string/desc_historyButton"
+                android:id="@+id/historyButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="right|center_vertical"
                 android:background="@drawable/btn_background"
                 android:clickable="true"
-                android:visibility="visible"
-                android:contentDescription="@string/desc_infoButton"
-                android:scaleType="centerInside"
-                android:src="@drawable/next" />
-
-            <ImageButton
-                android:id="@+id/previousButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_gravity="left|center_vertical"
-                android:background="@drawable/btn_background"
-                android:clickable="true"
-                android:visibility="invisible"
-                android:contentDescription="@string/desc_historyButton"
-                android:scaleType="centerInside"
-                android:src="@drawable/previous" />
-
-            <Button
-                android:id="@+id/closeButton"
-                android:layout_width="86dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center|center_vertical"
-                android:background="#DDDDDD"
-                android:clickable="true"
-                android:scaleType="centerInside"
-                android:text="@string/skip_tutorial"
-                android:textColor="#FF862D"
-                android:textStyle="bold" />
+                android:src="@drawable/ic_menu_history"                 
+                android:scaleType="centerInside"/>
         </FrameLayout>
     </FrameLayout>
 
